# nimiapp-realm-world-studio

./: .gitattributes  .gitignore  ADMISSION.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  nimi.app.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
.nimi/admission/: build-profile.yaml  submission.yaml
.nimi/spec/: INDEX.md
.nimi/spec/project/: AGENTS.md
.nimi/spec/project/kernel/: agent-setting-field-map.md  asset-and-binding.md  character-setting-field-map.md  core-rules.md  failure-semantics.md  index.md  metrics-and-realm-gaps.md  post-publishing.md  product-acceptance-and-execution-plan.md  product-scope.md  realm-agent-object.md  runtime-ai-consumption.md  storybook.md  world-character-object.md
scripts/: check-realm-world-studio-i18n.ts  check-realm-world-studio-spec.ts  ensure-dev-renderer-port.mjs  i18n-audit.mjs  i18n.config.json  local-audit.mjs  pack.mjs  run-electron-dev.mjs  validate.mjs
src-electron/: main.ts  runtime-auth.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/shell/: app-identity.ts
src/shell/renderer/: App.tsx  index.html  main.tsx  styles.css
src/shell/renderer/app-shell/: app-store.ts  auth-provider.tsx  language-switcher.test.tsx  language-switcher.tsx  routes.test.ts  routes.tsx  shell-layout.test.ts  shell-layout.tsx  studio-platform.test.ts  studio-platform.ts  studio-realm-transport.ts  (+1 more)
src/test/: setup.ts
(+46 files in other folders)
