[package]
name = "nimiapp-realm-world-studio"
version = "0.1.0"
description = "Realm World Studio — Creator-facing operation desktop app for Realm worlds and creator agents."
authors = ["Nimi Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net", "sync", "time"] }
dotenvy = "0.15"
nimi-shell-tauri = { path = "../../../nimi/kit/shell/tauri" }
reqwest = { version = "0.12", features = ["rustls-tls"] }

[dev-dependencies]
tempfile = "3"
